--- a/table.html
+++ b/table.html
@@ -47,7 +47,7 @@
     <script>
         $(document).ready(function () {
 
-            $.getJSON('13.json', function (json) {
+            $.getJSON('test.json', function (json) {
                 var tr;
                 for (var i = 0; i < json.length; i++) {
                     tr = $('<tr/>');
