--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>DOS Release Notes</title>
 
     <!--Jquery-->
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
         crossorigin="anonymous"></script>
 
     <!--Datatables
@@ -197,7 +197,7 @@
                     //    column_number: 8,
                     //},
                 ], {
-                    cumulative_filtering: true
+                    //cumulative_filtering: true
                 });
             });
         });
@@ -223,7 +223,7 @@
 
         <!--Last updated-->
         <div class="collapse navbar-collapse justify-content-end" id="last-updated">
-            Last updated
+            Last Updated
             <script>
                 document.write(document.lastModified);
             </script>
