--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <th style="width: 12%">Release date</th>
             <th>Type</th>
             <th>Release note</th>
-            <th>Products affected</th>
+            <th>Products Affected</th>
             <th>ID</th>
         </thead>
         <tbody>
