--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <th style="width: 10%">SQL Server version</th>
             <th style="width: 12%">Release date</th>
             <th>Type</th>
-            <th>Release note</th>
+            <th>Release Note</th>
             <th>Products Affected</th>
             <th>ID</th>
         </thead>
