--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
         <!--Last updated-->
         <div class="collapse navbar-collapse justify-content-end" id="last-updated">
-            Last Updated
+            Last updated
             <script>
                 document.write(document.lastModified);
             </script>
@@ -241,8 +241,8 @@
             <th style="width: 10%">SQL Server version</th>
             <th style="width: 12%">Release date</th>
             <th>Type</th>
-            <th>Release Note</th>
-            <th>Products Affected</th>
+            <th>Release note</th>
+            <th>Products affected</th>
             <th>ID</th>
         </thead>
         <tbody>
