--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
     <!--Datatables extensions: https://datatables.net/download-->
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.18/af-2.3.0/b-1.5.2/b-colvis-1.5.1/b-flash-1.5.2/b-html5-1.5.2/b-print-1.5.2/cr-1.5.0/fh-3.1.4/kt-2.4.0/r-2.2.2/rg-1.0.3/sl-1.2.6/datatables.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.18/af-2.3.0/b-1.5.2/b-colvis-1.5.1/b-flash-1.5.2/b-html5-1.5.2/b-print-1.5.2/cr-1.5.0/fh-3.1.4/kt-2.4.0/r-2.2.2/rg-1.0.3/sl-1.2.6/datatables.min.css"
-    />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.18/af-2.3.0/b-1.5.2/b-colvis-1.5.1/b-flash-1.5.2/b-html5-1.5.2/b-print-1.5.2/cr-1.5.0/fh-3.1.4/kt-2.4.0/r-2.2.2/rg-1.0.3/sl-1.2.6/datatables.min.css">
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -28,7 +27,7 @@
 
     <!--Select2-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet">
 
     <!--chosen-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js"></script>
@@ -41,7 +40,6 @@
     <!--main CSS-->
     <link rel="stylesheet" type="text/css" href="/main.css">
 
-
     <script>
         $(document).ready(function () {
 
@@ -51,6 +49,7 @@
                     tr = $('<tr/>');
                     tr.append("<td>" + json[i].software + "</td>");
                     tr.append("<td>" + json[i].fullName + "</td>");
+                    tr.append("<td>" + json[i].softwareAbbrev + "</td>");
                     tr.append("<td>" + json[i].releaseName + "</td>");
                     tr.append("<td>" + json[i].sqlServerVersion + "</td>");
                     tr.append("<td>" + json[i].releaseDate + "</td>");
@@ -97,7 +96,7 @@
                         }).data().each(function (group, i) {
                             if (last !== group) {
                                 $(rows).eq(i).before(
-                                    '<tr class="group"><td colspan="8">' +
+                                    '<tr class="group"><td colspan="9">' +
                                     group + '</td></tr>'
                                 );
 
@@ -116,7 +115,6 @@
                         table.order([groupColumn, 'asc']).draw();
                     }
                 });
-
 
                 'use strict';
                 var oTable = $('#notes').DataTable();
@@ -151,20 +149,29 @@
                         sort_as_custom_func: mySort
                     },
                     {
-                        // SQL Server version
+                        // Release name (aka version number)
                         column_number: 3,
+                        filter_type: 'multi_select',
+                        select_type: 'chosen',
+                        sort_order: 'desc',
+                        filter_match_mode: 'exact',
+                        sort_as: 'custom',
+                        sort_as_custom_func: mySort
+                    },
+                    {
+                        // SQL Server version
+                        column_number: 4,
                         filter_type: 'multi_select',
                         select_type: 'chosen',
                         filter_match_mode: 'exact',
                         sort_order: 'asc',
                         sort_as: 'custom',
                         sort_as_custom_func: mySort,
-                        width: '180px',
                         dropdownAutoWidth: true
                     },
                     {
                         // Release date
-                        column_number: 4,
+                        column_number: 5,
                         filter_type: 'multi_select',
                         sort_order: 'asc',
                         filter_match_mode: 'exact',
@@ -174,7 +181,7 @@
                     },
                     {
                         // Type
-                        column_number: 5,
+                        column_number: 6,
                         filter_type: 'multi_select',
                         filter_match_mode: 'exact',
                         select_type: 'chosen',
@@ -183,18 +190,18 @@
                     },
                     //{
                     //    Release note
-                    //    column_number: 6,
+                    //    column_number: 7,
                     //},            
                     {
                         // Products affected
-                        column_number: 7,
+                        column_number: 8,
                         column_data_type: "html",
                         html_data_type: "selector",
                         filter_default_label: "Select product",
                     }
                     //,{
                     //    ID
-                    //    column_number: 8,
+                    //    column_number: 9,
                     //},
                 ], {
                     //cumulative_filtering: true
@@ -202,14 +209,9 @@
             });
         });
     </script>
-
-    <style>
-    </style>
-
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <nav class="navbar navbar-light bg-light" id="logo-no-shadow">
             <a class="navbar-brand" href="#">
@@ -235,11 +237,12 @@
     </div>
     <table id="notes" class="cell-border display compact" style="width:100%">
         <thead>
-            <th style="width: 10%">Software</th>
+            <th>Software</th>
             <th>Full name</th>
-            <th style="width: 12%">Release</th>
-            <th style="width: 10%">SQL Server version</th>
-            <th style="width: 12%">Release date</th>
+            <th>Version</th>
+            <th>Release</th>
+            <th>SQL Server version</th>
+            <th>Release date</th>
             <th>Type</th>
             <th>Release note</th>
             <th>Products affected</th>
@@ -249,5 +252,4 @@
         </tbody>
     </table>
 </body>
-
 </html>
