--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         filter_type: 'multi_select',
                         select_type: 'chosen',
                         sort_order: 'desc',
-                        filter_default_label: 'Select me'
+                        filter_default_label: 'Select values'
                     },
                     {
                         // Full name (not shown by default because table display is grouped on these rows)
