--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <th>Version</th>
             <th>Release</th>
             <th>SQL Server version</th>
+            <th>Build date</th>
             <th>Release date</th>
             <th>Type</th>
             <th>Release note</th>
