fix header ordering

--- a/index.html
+++ b/index.html
@@ -63,11 +63,18 @@
             </script>
         </div>
     </nav>
-    <div id="intro-text">
-        <p id="intro">This page shows changes since the initial DOS 18.1 release. This page is in development and this is a demo site that
-            customers can't access. This page will probably end up in an existing HC resource. Feedback
-            invited on #pe-comms-and-docs. Ways to use this page: Drag columns  | 
-            <code>Shift</code> + click to sort multiple columns</p>
+    <div class="container-fluid" id="white">
+        <p>This page shows DOS 18.1 release notes and changes to previous versions of DOS software (CAP, SAMD, and SMD) since
+            DOS 18.1 was released on May 22–23, 2018.</p>
+        <p>
+            <i>
+                Click + drag columns to reorder
+                <span id="separator">|</span>
+                <code>Shift</code> + click arrows to sort multiple columns
+                <span id="separator">|</span>
+                <code>Shift</code> + click to select rows for export (select no rows to export everything)
+            </i>
+        </p>
     </div>
     <table id="notes" class="cell-border display compact" style="width:100%">
         <thead>
