github icon and resources directory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DOS Release Notes</title>
 
     <!--favicon-->
-    <link href="/favicon.ico?v=1" rel="shortcut icon" type="image/x-icon">
+    <link href="resources/favicon.ico?v=1" rel="shortcut icon" type="image/x-icon">
 
     <!--Jquery-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <nav class="navbar navbar-light bg-light" id="logo-no-shadow">
             <a class="navbar-brand" href="#">
-                <img id="triflame" src="logo.svg" height="53" class="d-inline-block align-top" alt="">
+                <img id="triflame" src="resources/logo.svg" height="53" class="d-inline-block align-top" alt="">
             </a>
         </nav>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -61,6 +61,7 @@
             <script>
                 document.write(document.lastModified);
             </script>
+            <a href="https://github.com/HealthCatalyst/vsts-release-notes-html-table" target="_blank"><img style="margin-left: 20px; margin-right: 30px;" src="resources/github.png"></a>
         </div>
     </nav>
     <div class="container-fluid" id="white">
