--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
 
         <!--Last updated-->
         <div class="collapse navbar-collapse justify-content-end" id="last-updated">
-            CUSTOMERS CANNOT ACCESS THIS SITE | Last updated
+            CUSTOMERS CANNOT ACCESS THIS SITE
+            <span id="separator-white">|</span>Last updated
             <script>
                 document.write(document.lastModified);
             </script>
-            <a href="https://github.com/HealthCatalyst/vsts-release-notes-html-table" target="_blank"><img style="margin-left: 20px; margin-right: 30px;" src="resources/github.png"></a>
+            <a href="https://github.com/HealthCatalyst/vsts-release-notes-html-table" target="_blank">
+                <img style="margin-left: 20px; margin-right: 30px;" src="resources/github.png">
+            </a>
         </div>
     </nav>
     <div class="container-fluid" id="white">
