--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </nav>
     <div class="container-fluid" id="white">
-        <p>This page shows DOS 18.1 release notes and changes to previous versions of DOS software (CAP, SAMD, and SMD) since
+        <p>This page shows release and hotfix notes for DOS software (CAP, SAMD, SMD, and the DMCM) since
             DOS 18.1 was released on May 22–23, 2018.</p>
         <p>
             <i>
